# Kuma

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
assets/source/models/: icosahedron.glb
engine/: CMakeLists.txt
engine/include/kuma/: asset_format.h  audio.h  camera.h  character.h  debug.h  ecs.h  fps_camera.h  input.h  kuma.h  log.h  material.h  math.h  particles.h  physics.h  platform.h  renderer.h  resource_manager.h  scene.h  time.h  transform.h  window.h
engine/shaders/: debug_normal.frag  debug_normal.vert  particle.frag  particle.vert  quad.frag  quad.vert  triangle.frag  triangle.vert
engine/src/audio/: audio.cpp
engine/src/character/: character.cpp  fps_camera.cpp
engine/src/core/: asset_format.cpp  camera.cpp  debug.cpp  debug_internal.h  debug_test_hooks.h  ecs.cpp  ecs_internal.h  engine.cpp  log.cpp  time.cpp  transform.cpp
engine/src/particles/: particles.cpp  presets.cpp
engine/src/physics/: jolt_globals.cpp  jolt_globals.h  layers.h  native_context.h  physics.cpp
engine/src/platform/: input.cpp  input_internal.h  paths.cpp  paths.h  time_internal.h  window.cpp
engine/src/renderer/: device.cpp  pipeline.cpp  renderer.cpp  renderer_impl.h  resources.cpp  swapchain.cpp
engine/src/resources/: resource_manager.cpp
engine/src/scene/: scene.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
tests/: CMakeLists.txt  asset_format_test.cpp  camera_test.cpp  debug_test.cpp  ecs_test.cpp  fps_camera_test.cpp  input_test.cpp  math_test.cpp  physics_test.cpp  time_test.cpp  transform_test.cpp
tests/integration/: asset_format_test.cpp  asset_pipeline_test.cpp  audio_test.cpp  character_simulation_test.cpp  physics_simulation_test.cpp  scene_test.cpp  test_helpers.h
tools/: download_sponza.ps1
tools/kuma-bake/: CMakeLists.txt  Cargo.toml
tools/kuma-bake/src/: error.rs  format.rs  gltf.rs  lib.rs  main.rs  materials.rs  mesh.rs  scene.rs  sound.rs  texture.rs
tools/kuma-bake/tests/: gltf_test.rs  mesh_test.rs  scene_test.rs  sound_test.rs  texture_test.rs
tools/kuma-bake/tests/fixtures/: gen_two_node_scene.py  triangle.glb  two_node_scene.glb
