# ── Unit Tests ───────────────────────────────────────────────────
# Will use GoogleTest. Uncomment when we add the first test.
#
# find_package(GTest REQUIRED)
#
# add_executable(kuma-tests
#     test_example.cpp
# )
#
# target_link_libraries(kuma-tests PRIVATE kuma-engine GTest::gtest_main)
#
# include(GoogleTest)
# gtest_discover_tests(kuma-tests)

message(STATUS "[Kuma] Tests target is a placeholder — no tests yet")
